feat: add-swagger add Swagger documentation and endpoint description
