# swagger_output.json
@@ -2,18 +2,58 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "title": "API Movies",
+    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
   "host": "localhost:3000",
   "basePath": "/",
+  "tags": [
+    {
+      "name": "User",
+      "description": "Endpoints"
+    },
+    {
+      "name": "Movie",
+      "description": "DataMovie"
+    },
+    {
+      "name": "News",
+      "description": "DataNews"
+    }
+  ],
   "schemes": [
-    "http"
+    "http",
+    "https"
+  ],
+  "securityDefinitions": {
+    "api_key": {
+      "type": "apiKey",
+      "name": "api_key",
+      "in": "header"
+    },
+    "petstore_auth": {
+      "type": "oauth2",
+      "authorizationUrl": "https://petstore.swagger.io/oauth/authorize",
+      "flow": "implicit",
+      "scopes": {
+        "read_pets": "read your pets",
+        "write_pets": "modify pets in your account"
+      }
+    }
+  },
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
   ],
   "paths": {
     "/register": {
       "post": {
-        "description": "",
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint para criar um usuário.",
         "parameters": [
           {
             "name": "body",
@@ -52,7 +92,10 @@
     },
     "/login": {
       "post": {
-        "description": "",
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint para logar um usuário.",
         "parameters": [
           {
             "name": "body",
@@ -98,7 +141,10 @@
     },
     "/filmes": {
       "post": {
-        "description": "",
+        "tags": [
+          "Movie"
+        ],
+        "description": "Endpoint para cadastrar filme.",
         "parameters": [
           {
             "name": "authorization",
@@ -128,7 +174,10 @@
         }
       },
       "get": {
-        "description": "",
+        "tags": [
+          "Movie"
+        ],
+        "description": "Endpoint para obter todos os filmes.",
         "parameters": [
           {
             "name": "page",
@@ -162,7 +211,10 @@
     },
     "/filmes/{id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Movie"
+        ],
+        "description": "Endpoint para obter filme específico.",
         "parameters": [
           {
             "name": "id",
@@ -195,7 +247,10 @@
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Movie"
+        ],
+        "description": "Endpoint para editar filme específico.",
         "parameters": [
           {
             "name": "id",
@@ -242,7 +297,10 @@
     },
     "/scrapper": {
       "post": {
-        "description": "",
+        "tags": [
+          "News"
+        ],
+        "description": "Endpoint para obter filme específico.",
         "responses": {
           "200": {
             "description": "OK"
@@ -252,6 +310,88 @@
           }
         }
       }
+    }
+  },
+  "definitions": {
+    "User": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Jhon Doe"
+        },
+        "age": {
+          "type": "number",
+          "example": 29
+        },
+        "parents": {
+          "type": "object",
+          "properties": {
+            "father": {
+              "type": "string",
+              "example": "Simon Doe"
+            },
+            "mother": {
+              "type": "string",
+              "example": "Marie Doe"
+            }
+          }
+        },
+        "diplomas": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "school": {
+                "type": "string",
+                "example": "XYZ University"
+              },
+              "year": {
+                "type": "number",
+                "example": 2020
+              },
+              "completed": {
+                "type": "boolean",
+                "example": true
+              },
+              "internship": {
+                "type": "object",
+                "properties": {
+                  "hours": {
+                    "type": "number",
+                    "example": 290
+                  },
+                  "location": {
+                    "type": "string",
+                    "example": "XYZ Company"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "AddUser": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Jhon Doe"
+        },
+        "age": {
+          "type": "number",
+          "example": 29
+        },
+        "about": {
+          "type": "string",
+          "example": ""
+        }
+      },
+      "required": [
+        "name",
+        "age"
+      ]
     }
   }
 }
